fix footer overlapping issue, move body pseudo element to main-content

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,21 +4,7 @@ body {
 	font-family: 'Source Code Pro', monospace;
 	font-size: 1rem;
 	overflow-x: hidden;
-}
-
-body::before {
-	background-attachment: fixed;
-	background-image: url('../images/question-space-double.png');
-	background-repeat: space;
-	background-size: 15px auto;
-	border-radius: 50%;
-	content: '';
-	height: 85vh;
-	left: 5vw;
-	opacity: 0.4;
-	position: absolute;
-	transform: rotate(-20deg);
-	width: 85vw;
+	padding-bottom: 100px; /* avoid main content crashing with footer*/
 }
 
 .main-content {
@@ -38,6 +24,24 @@ body::before {
 	position: absolute;
 	width: 100%;
 	z-index: -1;
+}
+
+.main-content::after {
+	background-attachment: fixed;
+	background-image: url('../images/question-space-double.png');
+	background-repeat: space;
+	background-size: 15px auto;
+	bottom: -5vh;
+	border-radius: 50%;
+	content: '';
+	height: 80vh;
+	left: -12vw;
+	opacity: 0.4;
+	position: absolute;
+	top: 0;
+	transform: rotate(-20deg);
+	width: 80vw;
+	z-index: -2;
 }
 
 .header {
@@ -97,7 +101,7 @@ body::before {
 	left: 0;
 	position: fixed;
 	text-align: center;
-	width: 100%;
+	/* width: 100%; */
 	z-index: 5;
 }
 
@@ -119,11 +123,17 @@ body::before {
 }
 
 @media (max-width: 576px){
+	body {
+		padding-bottom: 0;
+	}
+	
 	.footer {
-		text-align: left;
+		text-align: center;
 		position: relative;
 	}
-	.footer__logo, .footer__credit {
-		display: block;
+	
+	.main-content {
+		margin: 30px 15px 90px 15px;
 	}
+	
 }
